# swagger.json
@@ -5,7 +5,7 @@
     "description": "Cwag Project",
     "version": "1.0.0"
   },
-  "host": "cwagapi.herokuapp.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
@@ -37,28 +37,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "styleName": {
+                "customerOrder": {
                   "example": "any"
                 },
-                "styleImages": {
+                "customerOrderQuantity": {
                   "example": "any"
                 },
-                "styleDescription": {
+                "customerAddress": {
                   "example": "any"
                 },
-                "styleColor": {
+                "customerEmail": {
                   "example": "any"
                 },
-                "modelDescription": {
-                  "example": "any"
-                },
-                "stylePrice": {
-                  "example": "any"
-                },
-                "styleDetails": {
-                  "example": "any"
-                },
-                "quantiy": {
+                "customerOrderDate": {
                   "example": "any"
                 }
               }
@@ -68,6 +59,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -91,28 +85,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "styleName": {
+                "customerOrder": {
                   "example": "any"
                 },
-                "styleImages": {
+                "customerOrderQuantity": {
                   "example": "any"
                 },
-                "styleDescription": {
+                "customerAddress": {
                   "example": "any"
                 },
-                "styleColor": {
+                "customerEmail": {
                   "example": "any"
                 },
-                "modelDescription": {
-                  "example": "any"
-                },
-                "stylePrice": {
-                  "example": "any"
-                },
-                "styleDetails": {
-                  "example": "any"
-                },
-                "quantiy": {
+                "customerOrderDate": {
                   "example": "any"
                 }
               }
@@ -122,6 +107,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -141,6 +132,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
